Jumping main-page bug fixed (machine-typing)

--- a/src/components/main-page-content/charity-banner/CharityBanner.module.scss
+++ b/src/components/main-page-content/charity-banner/CharityBanner.module.scss
@@ -20,16 +20,14 @@
 
     .typing {
       width: 534px;
-      max-height: 100%;
       padding: 5%;
-      overflow: hidden;
 
       p {
+        height: 40px;
         text-align: center;
         font-family: Roboto, sans-serif;
         font-weight: 700;
         font-size: 30px;
-        line-height: 40px;
         text-shadow: 3px 3px #000;
         color: white;
       }
@@ -39,9 +37,11 @@
 }
 
 @media (min-width:568px) {
-  .typing p {
-    font-size: 40px;
-    line-height: 50px;
+  .typing {
+    p {
+      font-size: 40px;
+      height: 50px;
+    }
   }
 }
 
@@ -55,7 +55,7 @@
 
         p {
           font-size: 50px;
-          line-height: 60px;
+          height: 60px;
         }
       }
     }
